# hunt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.beads/: issues.jsonl
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: ai.rs  browser.rs  db.rs  email.rs  main.rs  models.rs  tui.rs
