[package]
name = "hunt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
imap = "2"
native-tls = "0.2"
mailparse = "0.15"
scraper = "0.22"
regex = "1"
strsim = "0.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
thirtyfour = "0.33"
rand = "0.8"
textwrap = "0.16"
ratatui = "0.29"
crossterm = "0.28"
